--- a/src/app/overview/overview.page.html
+++ b/src/app/overview/overview.page.html
@@ -1,8 +1,8 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>overview</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
 <p>Overview</p>
