load locations's info

--- a/src/app/estate-home/estate-home.page.html
+++ b/src/app/estate-home/estate-home.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <!-- <ion-back-button defaultHref="my-estates"></ion-back-button> -->
+      <ion-icon color="primary" size="large" name="home" routerLink="/" routerDirection="forward"></ion-icon>
+      <!-- <ion-home-button></ion-home-button> -->
     </ion-buttons>
     <ion-title>
       Estate home
