--- a/src/app/locations/locations.page.html
+++ b/src/app/locations/locations.page.html
@@ -1,22 +1,19 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button defaultHref="my-estates"></ion-back-button>
     </ion-buttons>
     <ion-title>
-      Locations
+      Select a Locations
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-button color="primary" routerLink="/details:2">Estates</ion-button>
   <ion-list>
-    <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div>
+    <ion-item *ngFor="let location of locations" >
+      <ion-label (click)="onClick(location.id)"> {{location.name}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
