--- a/src/app/my-estates/my-estates.page.html
+++ b/src/app/my-estates/my-estates.page.html
@@ -1,8 +1,13 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-title>
+      Royal Estates
+    </ion-title>
+  </ion-toolbar>
+  <ion-toolbar color="success">
     <ion-title>
       My Estates
     </ion-title>
