--- a/src/app/estates/estates.page.html
+++ b/src/app/estates/estates.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="locations"></ion-back-button>
     </ion-buttons>
@@ -10,13 +10,18 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div>
-    </ion-item>
-  </ion-list>
+  <div *ngFor="let item of result">
+    <ion-label background-color="success"> {{item.region}}</ion-label>
+    <ion-list>
+        
+        <ion-item *ngFor="let estate of item.estates">
+          <ion-thumbnail slot="start">
+            <img src="{{estate.image}}">
+          </ion-thumbnail>
+          <ion-label  >Ref No.{{estate.refNumber}}</ion-label>
+          <p position="floating">Hayao Miyazaki • 1988</p>
+          <ion-button fill="clear" slot="end">View</ion-button>
+        </ion-item>
+    </ion-list>
+  </div>
 </ion-content>
