latest estates/locations changes

--- a/src/app/estate-home/estate-home.page.html
+++ b/src/app/estate-home/estate-home.page.html
@@ -1,8 +1,12 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <!-- <ion-back-button defaultHref="my-estates"></ion-back-button> -->
-      <ion-icon color="primary" size="large" name="home" routerLink="/" routerDirection="forward"></ion-icon>
+      <ion-back-button defaultHref="estates"></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button side="right">
+         <ion-icon   size="large" name="home" routerLink="/" routerDirection="forward"></ion-icon>
+      </ion-button>
       <!-- <ion-home-button></ion-home-button> -->
     </ion-buttons>
     <ion-title>
