--- a/src/app/locations/locations.page.html
+++ b/src/app/locations/locations.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let location of locations" >
-      <ion-label (click)="onClick(location.id)"> {{location.name}}</ion-label>
+      <ion-label (click)="onClick(location.id, location.name)"> {{location.name}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
