--- a/src/app/estate-home/estate-home.page.html
+++ b/src/app/estate-home/estate-home.page.html
@@ -1,16 +1,16 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="estates"></ion-back-button>
+      <ion-back-button defaultHref="estates/:{{locid}}/:{{locName}}"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button side="right">
-         <ion-icon   size="large" name="home" routerLink="/" routerDirection="forward"></ion-icon>
+      <ion-button side="right" routerLink="/" routerDirection="forward">
+         <ion-icon   size="large" name="home"></ion-icon>
       </ion-button>
       <!-- <ion-home-button></ion-home-button> -->
     </ion-buttons>
     <ion-title>
-      Estate home
+      Ref. No {{refNumber}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
