--- a/src/app/estates/estates.page.html
+++ b/src/app/estates/estates.page.html
@@ -25,7 +25,7 @@
             <p style="font-size: 16px;">{{estate.type}}, {{estate.bedrooms}} Bedrooms</p>
             <p style="font-size: 14px;">{{name}}, {{estate.region}}</p>
           </div>
-          <ion-button fill="clear" slot="end" (click)="onDtClick(estate.id)">View</ion-button>
+          <ion-button fill="clear" slot="end" (click)="onDtClick(estate.id, estate.region)">View</ion-button>
         </ion-item>
     </ion-list>
   </div>
