--- a/src/app/tabs/map/map.page.html
+++ b/src/app/tabs/map/map.page.html
@@ -5,6 +5,11 @@
 </ion-header> -->
 
 <ion-content>
+  <ion-fab vertical="bottom" horizontal="start">
+    <ion-fab-button (click)="navigate()">
+      <ion-icon name="navigate"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   <agm-map style="width: 100%; height: 100%;" [latitude]="location.latitude" [longitude]="location.longitude" [mapTypeId]="location.mapType" [zoom]="location.zoom">
     <agm-marker [latitude]="location.marker.lat" [longitude]="location.marker.lng"></agm-marker>
   </agm-map>
