--- a/src/app/estate-home/estate-home.page.html
+++ b/src/app/estate-home/estate-home.page.html
@@ -1,7 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="estates/:{{locid}}/:{{locName}}"></ion-back-button>
+      <ion-back-button *ngIf="!isDataFromStorage" defaultHref="estates/:{{locid}}/:{{locName}}"></ion-back-button>
+      <ion-back-button *ngIf="isDataFromStorage" defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button side="right" routerLink="/" routerDirection="forward">
@@ -15,9 +16,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-tabs>
-    <ion-tab-bar slot="bottom">
+<ion-content >
+  <ion-tabs slot="fixed">
+    <ion-tab-bar slot="bottom"> 
       <ion-tab-button tab="overview">
         <ion-icon name="information-circle"></ion-icon>
         <ion-label>Overview</ion-label>
