adding sidebar menu saved estates loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,19 @@
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerDirection="root" routerLink="/locations">
+              <ion-icon slot="start" name="search"></ion-icon>
               <ion-label>
-                {{p.title}}
+                Find a Location
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+            <ion-item (click)="onClick(p.id, p.region, p.locationId, p.locationName, p.refNumber, p.latitude, p.longitude)">
+              <ion-icon slot="start" name="bookmarks"></ion-icon>
+              <ion-label>
+                Ref NO{{p.refNumber}}
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
