--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,6 @@
         </ion-list>
       </ion-content>
     </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
+    <ion-router-outlet [swipeGesture]="false" id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
